Fix template path after moving example site to root

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 baseURL = "https://examplesite.com"
 title = "Meghna"
 theme = "meghna-hugo"
-themesDir = "../.."
+themesDir = "themes"
 # post pagination
 paginate = "6"
 # post excerpt
